# cmakelists-sample

./: .gitignore  CMakeLists.txt  CMakeSettings.json  config.yaml  main.cpp
lib/my-lib/: my_lib.cpp  my_lib.hpp
src/: test.cpp  test.hpp
